--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "dev": "nodemon --exec babel-node server"
+    "dev": "nodemon --exec babel-node server",
+    "migrate": "npx prisma migrate dev",
+    "studio": "npx prisma studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.13.0",
     "apollo-server": "^3.7.0",
     "graphql": "^16.5.0"
   },
@@ -17,6 +20,10 @@
     "@babel/core": "^7.17.10",
     "@babel/node": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
-    "nodemon": "^2.0.16"
+    "@types/node": "^17.0.31",
+    "nodemon": "^2.0.16",
+    "prisma": "^3.13.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   }
 }
