--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "jistagram",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "scripts": {
     "dev": "nodemon --exec babel-node server",
     "migrate": "npx prisma migrate dev",
@@ -12,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/load-files": "^6.5.3",
+    "@graphql-tools/merge": "^8.2.11",
+    "@graphql-tools/schema": "^8.3.11",
     "@prisma/client": "^3.13.0",
     "apollo-server": "^3.7.0",
+    "dotenv": "^16.0.0",
     "graphql": "^16.5.0"
   },
   "devDependencies": {
