--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@graphql-tools/schema": "^8.3.11",
     "@prisma/client": "^3.13.0",
     "apollo-server": "^3.7.0",
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "graphql": "^16.5.0"
   },
