--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "apollo-server": "^3.7.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
-    "graphql": "^16.5.0"
+    "graphql": "^16.5.0",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
