--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@graphql-tools/schema": "^8.3.11",
     "@prisma/client": "^3.13.0",
     "apollo-server": "^3.7.0",
+    "apollo-server-express": "^3.7.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
+    "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "graphql-upload": "^13.0.0",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
