--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "express": "^4.18.1",
     "graphql": "^16.5.0",
     "graphql-upload": "^13.0.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
