--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-env": "^7.17.10",
     "@types/node": "^17.0.31",
     "nodemon": "^2.0.16",
+    "prettier-plugin-prisma": "^3.14.0",
     "prisma": "^3.13.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
