--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^3.13.0",
     "apollo-server": "^3.7.0",
     "apollo-server-express": "^3.7.0",
+    "aws-sdk": "^2.1135.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
