--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "graphql-subscriptions": "^2.0.0",
     "graphql-upload": "^13.0.0",
+    "graphql-ws": "^5.8.2",
     "jsonwebtoken": "^8.5.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ws": "^8.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
